# SFML-Essentials

./: CMakeLists.txt
Chapter-1/: CMakeLists.txt
Chapter-1/src/: main.cpp
Chapter-2/: CMakeLists.txt
Chapter-2/include/: AssetManager.hpp
Chapter-2/src/: AssetManager.cpp  main.cpp
